--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,22 @@
       crossorigin="anonymous"
     />
     <title>{% block title %}Registration Form{% endblock %}</title>
+
+    <style>
+      /* Custom CSS for centering the form */
+      body,
+      html {
+        height: 100%;
+      }
+
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        margin: 0 auto;
+      }
+    </style>
   </head>
   <body>
     <main>{% block content %}{% endblock %}</main>
