--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,14 @@
         height: 100%;
         margin: 0 auto;
       }
+
+      .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0 auto;
+      } -->
     </style>
   </head>
   <body>
